--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -9,10 +9,10 @@
   }
 
 
-  $main-color: tan;
-  $body-color: whitesmoke;
+  $main-color: #023749;
+  $body-color: #ebddcc;
   $sec-color: dimgray;
-  $new-project: darkcyan;
+  $new-project: #f18d51;
 
 @font-face{font-family: 'Kern-Regular';
 src: font-url('Kern-Regular.otf')}
