--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -13,6 +13,7 @@
   $body-color: #ebddcc;
   $sec-color: dimgray;
   $new-project: #f18d51;
+  $new-accent: #c7ab87;
 
 @font-face{font-family: 'Kern-Regular';
 src: font-url('Kern-Regular.otf')}
