--- a/app/views/static_pages/construction.html.erb
+++ b/app/views/static_pages/construction.html.erb
@@ -12,7 +12,7 @@
   <div class="construction">
     <span class="inner-cons">
       <p id='construction'>under construction</p>
-      <p id="const-conact"><%= mail_to "contact@labaki.design" , "contact" %></p>
+      <p id="const-conact"><%= mail_to "social@labaki.studio" , "contact" %></p>
   </span>
 </div>
 
