--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -10,7 +10,7 @@
 
 <div class="contact">
   <p class='header-a'>Contact</p>
-  <p class="inner-content"> <%= t('reach-out') %>  <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %>, <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' , target: "_blank" %>, <%=link_to 'Behance' , 'https://www.behance.net/labaki' , target: "_blank" %>, <%= t('medium') %> <%= mail_to "contact@labaki.design" , "email" %>
+  <p class="inner-content"> <%= t('reach-out') %>  <%=link_to 'Instagram' , 'https://www.instagram.com/labakistudio/' , target: "_blank" %>, <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' , target: "_blank" %>, <%=link_to 'Behance' , 'https://www.behance.net/labaki' , target: "_blank" %>, <%= t('medium') %> <%= mail_to "social@labaki.studio" , "email" %>
   <%= t('byphone') %> <a href="tel:+961 70 047 045">   <%= t('device-call') %> </a>
   </p>
 </div>
