--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -90,7 +90,7 @@
 </div>
   <div class="contacts"><p id="subtitle-footer">Follow</p>
 
-    <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design', target: "_blank" %>
+    <%=link_to 'Instagram' , 'https://www.instagram.com/labakstudio/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design', target: "_blank" %>
   </div>
 
     <div class="copyright">&copy; 2021 Labaki Design <br> All Rights Reserved</div>
